LPS-125205 Remove overflow inherit to prevent the builder title bar from scrolling off

--- a/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
+++ b/modules/apps/data-engine/data-engine-taglib/src/main/resources/META-INF/resources/data_layout_builder/css/components/_ddm_form_builder.scss
@@ -130,10 +130,3 @@
 		z-index: 1000;
 	}
 }
-
-.portlet-journal
-	.edit-article-form
-	.contextual-sidebar-content
-	> .container-fluid {
-	overflow: inherit;
-}
